syntax = "proto3";
import public "common.proto";
package clink.proto;
option cc_enable_arenas = true;
option cc_generic_services = true;


message Request {
  string sid = 1;
  string model_name = 2;
  string model_version = 3;
  map<int32, SampleRecord> sample_map = 5;
};

//din模型专用fg输出
message DinResultRecord{
  repeated float index = 1 [packed = true];
  repeated float value = 2 [packed = true];
}

message ResultRecord{
  oneof kind {
      DinResultRecord din_result = 1;
  };
}


message Response {
  string sid = 1;
  int32 err_no = 2;
  string err_msg = 3;
  OutputFormat output_format = 4;
  map<int32, ResultRecord> result_map = 5;
};

service Service {
  rpc Process(Request) returns (Response);
};